Some minor changes (mainly for NIO) and version changed to 7.2.0-SNAPSHOT